--- a/edit/edit.html
+++ b/edit/edit.html
@@ -2,12 +2,23 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="header.css">
+	<link rel="stylesheet" type="text/css" href="edit.css">
 </head>
 <body>
+<div class="allDiv">
+	<form id="submitForm">
+		Title<br>
+		<input type="text" id="titleInput" required>
+		<br>
+		Description<br>
+		<input type="text" id="descriptionInput" >
+		<br><br>
+		<input type="submit" value="Submit">
+	</form>
+</div>
 
 </body>
 	<script src="jquery-3.2.0.min.js"></script>
 	<script src="edit.js"></script>
-	<link rel="stylesheet" type="text/css" href="header.css">
-	<link rel="stylesheet" type="text/css" href="edit.css">
 </html>
