--- a/edit/edit.html
+++ b/edit/edit.html
@@ -2,23 +2,24 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="header.css">
+	<link rel="stylesheet" type="text/css" href="../header.css">
 	<link rel="stylesheet" type="text/css" href="edit.css">
 </head>
 <body>
 <div class="allDiv">
 	<form id="submitForm">
 		Title<br>
-		<input type="text" id="titleInput" required>
+		<input type="text" id="titleInput" value="title" required>
 		<br>
 		Description<br>
-		<input type="text" id="descriptionInput" >
+		<input type="text" id="descriptionInput" value="desc">
 		<br><br>
 		<input type="submit" value="Submit">
+		<button id="cancel">Cancel</button>
 	</form>
 </div>
 
 </body>
-	<script src="jquery-3.2.0.min.js"></script>
+	<script src="../jquery-3.2.0.min.js"></script>
 	<script src="edit.js"></script>
 </html>
