--- a/home.html
+++ b/home.html
@@ -34,6 +34,10 @@
 		</ul>
 	</div>
 
+	<div id="noIdea" style="display:none;">
+		<p>Stumped on ideas? Search for new ones and then add!</p>
+	</div>
+
 </div>
 
 <div class="allDiv" id="editDiv" style="display:none;">
@@ -45,10 +49,6 @@
 		<button id="submit">Submit</button>
 		<button id="cancel">Cancel</button>
 	</form>
-</div>
-
-<div class="allDiv" id="botDiv" style="display:none;">
-	<p>Stumped on ideas? Search for new ones and then add!</p>
 </div>
 
 </body>
